--- a/.github/workflows/produção_smart-pets.yml
+++ b/.github/workflows/produção_smart-pets.yml
@@ -33,7 +33,12 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run:  |
+          cd Smart-Pets/
+          zip release.zip ./* -r
+          cd ..
+          mv Smart-Pets/release.zip .
+        
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
@@ -42,6 +47,13 @@ jobs:
           path: |
             release.zip
             !venv/
+
+      - name: Cleaning testing files
+        run: |
+          cd Smart-Pets/
+          rm db.sqlite3
+          rm .env
+          cd ..
 
   deploy:
     runs-on: ubuntu-latest
